# five_words_constexpr

./: CMakeLists.txt  LICENSE  README.md  constexpr.cpp
